@@ -6,9 +6,9 @@ SiteTitle  = "Bumblebee instrument booking"
 ; used in the copyright footer on every page
 CopyrightOwner = "Bumblebee Instrument Booking System"
 ; used whenever a user is told to contact the system admin
-AdminEmail = "bumblebee@example.com"
+AdminEmail = "bumblebee@example.edu"
 ; the "From" address in Bumblebee-generated emails
-SystemEmail = "apache@nanonanonano.net"
+SystemEmail = "apache@example.edu"
 ; the path to the base of the Bumblebee theme for images, css etc
 BasePath   = "/bumblebee"
 ; the base url to prepend to all generated links
@@ -26,7 +26,7 @@ VerboseData = 0
 
 [auth]
 ; This regular expression validates the username before any further authentication tests are done
-validUserRegexp = "/^[a-z0-9][a-z0-9@\-_.+]+$/"
+validUserRegexp = "/^[a-z0-9][a-z0-9@\-_.+]+$/i"
 ; ---- authentication methods ----
 ; Select the authorisation methods you want to use. 
 ; Multiple ones can be selected, magic password keys in the SQL table 'users' are used to 
@@ -45,6 +45,21 @@ RadiusPassToken = "--radius-auth-user"
 ; use an LDAP server if users are set up for that (see LDAPPassToken), config in ldap.ini
 useLDAP = 1
 LDAPPassToken = "--ldap-auth-user"
+;
+; ========== ADVANCED FUNCTIONS ==============
+; Turn on these advanced functions ONLY if you need them to debug authentication problems
+; or to recover a lost admin password.
+authAdvancedSecurityHole = false
+;
+; Include verbose error messages as to why the login failed (e.g. "Login failed: username unknown")
+; rather than just the generic "Login failed" message. Note that turning on these messages reveals
+; more about your internal setup and so should not be done in a production environment.
+verboseFailure = false
+; Force all login attempts to be successful regardless of whether the correct password was given
+; (allows forgotten admin passwords to be retrieved). Note that you NEVER want to turn this on in
+; a production environment!
+recoverAdminPassword = false
+
 
 [instruments]
 ; ---- calendar controls ----
